# xrep

./: .drone.yml  .gitignore  .gitpod.yml  .travis.yml  CHANGELOG.md  Cargo.toml  FAQ.md  GUIDE.md  README.md  WinManifest.xml  appveyor.yml  compile  gitpod.Dockerfile  snapcraft.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
ci/: before_deploy.sh  install.sh  script.sh  update-homebrew-formula.sh  utils.sh
complete/: _rg
crates/cli/: Cargo.toml
crates/cli/src/: decompress.rs  process.rs
crates/core/: app.rs  args.rs  main.rs  search.rs
crates/globset/: Cargo.toml
crates/globset/src/: lib.rs
crates/grep/: Cargo.toml
crates/ignore/: Cargo.toml
crates/ignore/src/: default_types.rs  lib.rs  types.rs  walk.rs
crates/matcher/: Cargo.toml
crates/matcher/src/: lib.rs
crates/pcre2/: Cargo.toml
crates/printer/: Cargo.toml
crates/regex/: Cargo.toml
crates/regex/src/: matcher.rs  word.rs
crates/searcher/: Cargo.toml
crates/searcher/src/: lib.rs
crates/searcher/src/searcher/: mmap.rs  mod.rs
doc/: rg.1  rg.1.md  rg.1.txt.tpl
globset/: Cargo.toml
globset/src/: glob.rs  lib.rs  pathutil.rs
grep/: Cargo.toml
grep-cli/src/: decompress.rs  pattern.rs  process.rs
grep-matcher/src/: lib.rs
grep-printer/: Cargo.toml
grep-printer/src/: color.rs  counter.rs  json.rs  standard.rs  summary.rs  util.rs
grep-regex/src/: config.rs  crlf.rs  literal.rs  matcher.rs  word.rs
grep-searcher/: Cargo.toml
grep-searcher/src/: lib.rs  line_buffer.rs  lines.rs
grep-searcher/src/searcher/: core.rs  glue.rs  mod.rs
grep/src/: lib.rs  literals.rs  search.rs
ignore/: Cargo.toml
ignore/src/: dir.rs  gitignore.rs  lib.rs  overrides.rs  pathutil.rs  types.rs  walk.rs
ignore/tests/: gitignore_recursive_tests.rs  gitignore_tests.gitignore  gitignore_tests.rs
pkg/brew/: ripgrep-bin.rb.in  ripgrep.rb
pkg/fedora/: _rg  rg.bash-completion  ripgrep.spec
src/: app.rs  args.rs  decoder.rs  decompressor.rs  logger.rs  magic.rs  main.rs  path_printer.rs  printer.rs  search.rs  search_buffer.rs  search_stream.rs  subject.rs  worker.rs
src/zip/: cp437.rs  mod.rs
termcolor/src/: lib.rs
tests/: feature.rs  misc.rs  regression.rs  tests.rs  workdir.rs
tests/data/: sherlock.tar
windows/: README.md  build.bat  manifest.xml
