[package]
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Line oriented search tool using Rust's regex library. Combines the raw\nperformance of grep with the usability of the silver searcher.\n"
documentation = "https://github.com/BurntSushi/ripgrep"
homepage = "https://github.com/BurntSushi/ripgrep"
keywords = ["regex", "grep", "egrep", "search", "pattern"]
license = "Unlicense/MIT"
name = "ripgrep"
readme = "README.md"
repository = "https://github.com/BurntSushi/ripgrep"
version = "0.1.16"

[[bin]]
bench = false
name = "rg"
path = "src/main.rs"

[dependencies]
bytecount = "0.1.2"
deque = "0.3"
docopt = "0.6"
env_logger = "0.3"
fnv = "1.0"
lazy_static = "0.2"
libc = "0.2"
log = "0.3"
memchr = "0.1"
memmap = "0.2"
num_cpus = "1"
regex = "0.1.77"
rustc-serialize = "0.3"
term = "0.4"
walkdir = "0.1"

[dependencies.grep]
path = "grep"
version = "0.1.2"

[dev-dependencies]
glob = "0.2"

[features]
simd-accel = ["regex/simd-accel"]

[profile]

[profile.release]
debug = true
panic = "abort"

[target]

[target."cfg(windows)"]

[target."cfg(windows)".dependencies]
kernel32-sys = "0.2"
winapi = "0.2"

[[test]]
name = "integration"
path = "tests/tests.rs"
