[package]
name = "grep-cli"
version = "0.1.5"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Utilities for search oriented command line applications.
"""
documentation = "https://docs.rs/grep-cli"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/cli"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/cli"
readme = "README.md"
keywords = ["regex", "grep", "cli", "utility", "util"]
license = "Unlicense/MIT"

[dependencies]
atty = "0.2.14"
bstr = "0.2.14"
globset = { version = "0.4.5", path = "../globset" }
lazy_static = "1.4.0"
log = "0.4.13"
regex = "1.4.3"
same-file = "1.0.6"
termcolor = "1.1.2"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.5"
