[package]
name = "ignore"
version = "0.4.17"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A fast library for efficiently matching ignore files such as `.gitignore`
against file paths.
"""
documentation = "https://docs.rs/ignore"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/ignore"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/ignore"
readme = "README.md"
keywords = ["glob", "ignore", "gitignore", "pattern", "file"]
license = "Unlicense/MIT"

[lib]
name = "ignore"
bench = false

[dependencies]
crossbeam-utils = "0.8.1"
globset = { version = "0.4.5", path = "../globset" }
lazy_static = "1.4.0"
log = "0.4.13"
memchr = "2.3.4"
regex = "1.4.3"
same-file = "1.0.6"
thread_local = "1.1.0"
walkdir = "2.3.1"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.5"

[dev-dependencies]
crossbeam-channel = "0.5.0"

[features]
simd-accel = ["globset/simd-accel"]
