[package]
name = "grep-printer"
version = "0.1.5"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
An implementation of the grep crate's Sink trait that provides standard
printing of search results, similar to grep itself.
"""
documentation = "https://docs.rs/grep-printer"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/printer"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/printer"
readme = "README.md"
keywords = ["grep", "pattern", "print", "printer", "sink"]
license = "Unlicense/MIT"

[features]
default = ["serde1"]
serde1 = ["base64", "serde", "serde_derive", "serde_json"]

[dependencies]
base64 = { version = "0.13.0", optional = true }
bstr = "0.2.14"
grep-matcher = { version = "0.1.2", path = "../matcher" }
grep-searcher = { version = "0.1.4", path = "../searcher" }
termcolor = "1.1.2"
serde = { version = "1.0.119", optional = true }
serde_derive = { version = "1.0.119", optional = true }
serde_json = { version = "1.0.61", optional = true }

[dev-dependencies]
grep-regex = { version = "0.1.3", path = "../regex" }
